corrected diploma thesis, major changes to SIMR chapters

--- a/diplomarbeit/sections/ch1_introduction/fahrstil-analyse.tex
+++ b/diplomarbeit/sections/ch1_introduction/fahrstil-analyse.tex
@@ -1,6 +1,7 @@
 \lfoot{Autor: Raphael Simsek}
 \subsection{Analyse und Verbesserung des Fahrstils}
 
+\todo{Bezug auf wie sie in der Graphik unten erkennen können, auf wie sie in Abb. 1 erkennen können ändern, Kapitel Referenzen genauso durch gehen}
 Aus persönlicher Erfahrung geht hervor, dass es bei der Ausbildung zum Fahrer eines Kraftfahrzeugs einigen Verbesserungsbedarf gibt. Häufig kann nicht immer der Fahrlehrer einem Fahrschüler einen nachhaltigen oder wünschenswerten Fahrstil näher bringen. Dies ist nämlich oft ein zeitintensiver Prozess ist. Aus diesem Grund wurden Methoden gesammelt und entwickelt, welche die Problematik aufholen sollen.
 
 \subsubsection{Sozialer Zwang}
@@ -34,7 +35,7 @@ Der bisherige Schaltvorschlag in einem kostengünstigen, gebrauchten Auto ist of
 Der Normzyklus ist insbesondere aufgrund des VW-Skandals bekannt geworden. Es erkennt die Motorsteuerung nämlich, wenn ein Abgastest gefahren wird. Dieser wird in der Fachsprache als Normzyklus bezeichnet wird \cite{SIMR.CH1-fahrstil-analyse.Normzyklus}. Der \textit{modifizierte neue europäische Fahrzyklus (MNEFZ)} ist der Normzyklus, der innerhalb der EU verwendet wird um den Normverbrauch eines Fahrzeuges zu errechnen. Dieser umfasst insgesamt 1180 Sekunden, wovon 780 Sekunden unter Stadtbedingungen und 400 Sekunden über Land gefahren werden. Der MNEFZ wird häufig wegen spritsparender Maßnahmen, vor dem Test, kritisiert. Diese Tricks dürfen von den Autoherstellern eingesetzt werden und umfassen die Erhöhung des Reifendrucks oder das Abklemmen der Lichtmaschine. Ferner wird der Test ohne eingeschalteter Klimaanlage oder anderer \textit{Creature-Comforts} gefahren. Herstellerangaben werden in Europa nämlich selten hinterfragt \cite{SIMR.CH1-fahrstil-analyse.MNEFZ}. In den USA mussten, im Gegensatz dazu, Automobilhersteller bereits in vielen Fällen hohe Entschädigungen zahlen für falsche Verbrauchsangaben bezahlen \cite{SIMR.CH1-fahrstil-analyse.falscherVerbrauchUS}.
 \paragraph{Carnot-Prozess}
 \todo{sanfter Einführen, wofür brauchen wir den Carnot Prozess}
-In diesem musste in Erfahrung gebracht werden, wie ein Motor funktioniert und welche Faktoren diesen beeinflussen. Vor allem ist dabei der Motorwirkungsgrad herausgestochen, welcher mit dem Carnot Prozess definiert ist. Dieser bestimmt wie viel Energie der Motor pro eingespritztem Kraftstoff definiert und ist damit bestimmt damit die Leistung die ein Motor emitiert. Ursprünglich war der Carnot Prozess definiert um einen Kreisprozess zu erläutern und wurde konnte folglich auch auf Motoren angewandt werden.
+In diesem musste in Erfahrung gebracht werden, wie ein Motor funktioniert und welche Faktoren diesen beeinflussen. Vor allem ist dabei der Motorwirkungsgrad herausgestochen, welcher mit dem Carnot Prozess definiert ist. Dieser bestimmt wie viel Energie der Motor pro eingespritztem Kraftstoff definiert und ist damit bestimmt damit die Leistung die ein Motor emitiert. Der Carnot Prozess beschreibt einen Kreisprozess, der auch auf Verbrennungsmotoren anwendbar sind, weil die  Ablaufsequenz der Arbeitsschritte immer gleich bleibt.
 Der Motorwirkungsgrad nach dem Carnot-Prozess, wird für bekannte Schaltvorschläge in Serienfahrzeugen meist noch nicht verwendet. Der Carnot-Prozess beschreibt die Errechnung des \textit{theoretisch möglichen} Motorwirkungsgrad, ohne dem Hinzuziehen von natürlichen Einflussgrößen. Diese können u.a. Reibung, Temperatur und Dichte sein \cite{SIMR.CH1-Fahrstil-Analyse.CarnotWirkungsgrad}. Genauere Ausführungen zu diesem Thema können im Kaptiel 2.1.2 - Thermodynamik gefunden werden. 
 
 \subsubsection{Schadstoffausstoß}
