--- a/diplomarbeit/sections/ch2_technische_grundlagen/hardware-sensorik/bluetooth.tex
+++ b/diplomarbeit/sections/ch2_technische_grundlagen/hardware-sensorik/bluetooth.tex
@@ -32,8 +32,4 @@ Die Wahl des Transportprotokolles ist entscheidend für die Art der Datenübertr
 Bei RFCOMM wird Wert gelegt auf übertragungs Zuverlässigkeit. Es sollen möglichst wenig bis gar keine Pakete verloren gehen. Wenn eine gewisse Menge an Daten nicht in einer bestimmten Zeit gesendet werden kann, wird die Verbindung getrennt und muss neu aufgebaut werden.
 \nextline
 \textbf{L2CAP\nextline}
-<<<<<<< Updated upstream
-Bei diesem Protokoll kommt es nicht auf den Datenverlust an sondern auf die Tatsache das die verbindung stehts aufrecht erhalten wird. Es wird ein Paket so oft gesendet bis es ankommt oder die Verbindung komplett ausfällt.
-=======
-Bei diesem Protokoll kommt es nicht auf den Datenverlust an sondern auf die Tatsache das die verbindung stehts aufrecht erhalten wird. Es wird ein Paket so oft gesendet bis es ankommt oder die Verbindung komplett ausfällt.
->>>>>>> Stashed changes
+Bei diesem Protokoll kommt es nicht auf den Datenverlust an sondern auf die Tatsache das die Verbindung stehts aufrecht erhalten wird. Es wird ein Paket so oft gesendet bis es ankommt oder die Verbindung komplett ausfällt.
