--- a/diplomarbeit/sources.bib
+++ b/diplomarbeit/sources.bib
@@ -196,6 +196,7 @@
     note = {Accessed on 30.03.2016}
 }
 
+
 @misc{MELD.CH3-redis.mainWebsite, 
     author = {Redis},
     year = {2016},
@@ -700,4 +701,28 @@ note = {Accessed on 30.03.2016}
 	title = {Unterschiede und Vergleich native Apps vs. Web Apps},
 	howpublished = "\url{http://www.app-entwickler-verzeichnis.de/faq-app-entwicklung/11-definitionen/107-unterschiede-und-vergleich-native-apps-vs-web-apps}",
 	note = {Accessed on 07.04.2016}
+}
+
+@misc{SIMR.CH2-obd2.Timeline, 
+    author = {MWisBest, Wikipedia User},
+    year = {2016},
+    title = {On-board diagnostics},
+    howpublished = "\url{https://en.wikipedia.org/wiki/On-board_diagnostics#History}",
+    note = {Accessed on 07.04.2016}
+}
+
+@misc{SIMR.CH2-obd2.PIDMustHave, 
+    author = {Jason Smith, ScanTool.net Staff},
+    year = {2010},
+    title = {Which obd2 pid's have to be supported by every car },
+    howpublished = "\url{https://www.scantool.net/forum/index.php?topic=3820.0}",
+    note = {Accessed on 07.04.2016}
+}
+
+@misc{SIMR.CH2-motorwirkungsgrad.maxWirkungsgrad, 
+    author = {Christian Bartsch},
+    year = {2005},
+    title = {Selbstzündender Meister des Wirkungsgrads},
+    howpublished = "\url{http://www.faz.net/aktuell/technik-motor/auto-verkehr/neuer-diesel-motor-selbstzuendender-meister-des-wirkungsgrads-1232042.html}",
+    note = {Accessed on 07.04.2016}
 }
