--- a/diplomarbeit/sections/ch1_introduction/co2-umwelt.tex
+++ b/diplomarbeit/sections/ch1_introduction/co2-umwelt.tex
@@ -5,8 +5,8 @@
 Kohlenstoffdioxid (\ce{CO2}) ist ein unsichtbares, geruchsloses Gas bestehend aus einem Kohlenstoff und zwei Sauerstoff-Atomen. 
 In jedem Stoffwechselprozess spielt Kohlenstoffdioxid eine wichtige Rolle, da beispielsweise der Mensch \ce{CO2} ausatmet. 
 Bei vielen Energiegewinnungsverfahren werden durch Verbrennung Energien freigesetzt, die als Nebenprodukt Kohlenstoff produzieren. 
-In der freien Luft verbinden sich diese Kohlenstoffpartikel mit Sauerstoff zu \ce{CO2}.
-\ce{CO2} ist Reaktionsträge und besitzt keine giftige Eigenschaft. 
+In der freien Luft verbinden sich diese Kohlenstoffpartikel mit Sauerstoff zu \ce{CO2}, dieses ist
+Reaktionsträge und besitzt keine giftige Eigenschaft. 
 Das Problem mit den Unmengen an ausgestoßenem \ce{CO2} ist, dass sein massives Vorkommen die Atmosphäre beschädigt.
 
 Alle Fahrzeuge, die fossile Brennstoffe als Energiequelle nutzen 
@@ -17,19 +17,20 @@ Der benutzte Kraftstoff bestimmt, wie viel \ce{CO2} bei der Verbrennung als Nebe
 Beispielsweise entsteht bei der Verbrennung von einem Liter Diesel mehr Kohlenstoffdioxid, als bei einem Liter Benzin.
 Der Kraftstoffverbrauch eines Kraftfahrzeugs und sein \ce{CO2}-Ausstoß stehen daher in enger Verbindung.
 Demnach existieren Werte, die man als Grenze für den Verbrauch festlegen kann. 
-Heutzutage spricht man von der Einheit Gramm pro Kilometer [g/km] als normierte Verbrauchsmessung.
+Heutzutage sprichen wir von der Einheit Gramm pro Kilometer [g/km] als normierte Verbrauchsmessung.
 Der Lenker eines PKW hat Einfluss auf seinen \ce{CO2}-Ausstoß, indem dieser bei starken und überflüssigen Beschleunigungsmanövern
 zu diesem Zeitpunkt mehr Schadstoffe produziert als nötig.
-Mit diesem Diplomprojekt, wollen wir Fahrenden ein Werkzeug in die Hand geben, ihren \ce{CO2}-Ausstoß während und nach der Fahrt
-einschätzen zu können. Damit haben sie die Möglichkeit ihre Fahrweise in Hinblick auf den \ce{CO2}-Ausstoß zu verbessern.
+Mit diesem Diplomprojekt, wollen wir Fahrenden ein Werkzeug anbieten, damit sie ihren \ce{CO2}-Ausstoß während und nach der Fahrt
+einschätzen können. Damit haben sie die Möglichkeit ihre Fahrweise in Hinblick auf den \ce{CO2}-Ausstoß zu verbessern.
 
 \clearpage
 
 \subsubsection{Treibhauseffekt}
 \ce{CO2} gilt als eines der häufigsten Treibhausgase.
 Das Kohlenstoffdioxid steigt bis zur Atmosphäre auf und bildet dort eine \textit{Mauer}.
-Sonnenstrahlen können zwar ohne weiteres durch, doch nicht so leicht wieder raus. Das heisst, dass die Sonnenstrahlen,
-die von der Erdoberfläche wieder zurück in den Weltraum reflektiert werden sollten, von der Erdatmosphäre zurück auf die Erde geworfen werden.
+Sonnenstrahlen können zwar ohne weiteres durch, doch nicht so leicht wieder raus. Die Sonnenstrahlen,
+die von der Erdoberfläche wieder zurück in den Weltraum reflektiert werden sollten, werden von der Erdatmosphäre zurück auf die Erde geworfen und erzeugen
+damit eine höhere Durchschnittstemperatur.
 Der Treibhauseffekt gilt als eine der Hauptursachen für den Klimawandel, welcher drastische Folgen für Natur, Tiere und Menschen hat. 
 Zu viel \ce{CO2} in der Atmosphäre bringt unter anderem das Abschmelzen von Gletschern, 
 den Anstieg der Meerestemperatur, den Anstieg des Meeresspiegels, 
