--- a/diplomarbeit/sections/ch1_introduction/co2-umwelt.tex
+++ b/diplomarbeit/sections/ch1_introduction/co2-umwelt.tex
@@ -44,7 +44,7 @@ Aussterben von Pflanzen und Tieren und Wetterphänomene wie zum Beispiel sehr wa
 \subsubsection{Das Kyoto-Protokoll}
 Im Rahmen des Kyoto-Protokolls haben sich viele westliche Staaten zu einer Reduktion der Treibhausgase verpflichtet. 
 Dieses Protokoll war der Startschuss für die Suche nach erneuerbaren Energien. 
-Anfang 2015 sind Gesetzesregelungen in Kraft getreten, die den Durchschnittsverbrauch eines PKW auf 130g/\ce{CO2} pro kilometer limitierten. 
-Bis 2020 soll dieses Limit auf 95g/CO2 pro kilometer herunter gesetzt werden.
+Anfang 2015 sind Gesetzesregelungen in Kraft getreten, die den Durchschnittsverbrauch eines PKW auf 130g/\ce{CO2} pro Kilometer limitierten. 
+Bis 2020 soll dieses Limit auf 95g/CO2 pro Kilometer herunter gesetzt werden.
 
 \clearpage
